not responsive splash page

--- a/index.html
+++ b/index.html
@@ -10,7 +10,18 @@
     <link rel="shortcut icon" href="img/logos/favicon.ico" type="image/x-icon">
 </head>
 
-<body>  
+<body>
+    <div class="splash">
+        <div class="circle">
+            <div class="outer-circle"></div>
+            <div class="inner-circle"></div>
+            <div class="box box-top-left"></div>
+            <div class="box box-bottom-left"></div>
+            <div class="box box-bottom-right"></div>
+            <div class="box box-top-right"></div>
+        </div>
+        <h1 class="fade-in">Circle</h1>
+    </div>
     <nav class="nav-bar">
         <a href="index.html"><img class="circle" title="Return to home" src="img/logos/circle.svg"
                 alt="logo circle"></a>
@@ -56,6 +67,10 @@
                     alt="logo fedex" class="img-client"></a>
             <a href="https://www.amazon.com" target="_blank"><img loading="lazy" src="img/logos/amazon-logo.svg"
                     alt="logo amazon" class="img-client"></a>
+            <a href="https://www.nike.com" target="_blank"><img loading="lazy" src="img/logos/Logo_NIKE.svg"
+                    alt="logo nike" class="img-client"></a>
+            <a href="https://www.adidas.com" target="_blank"><img loading="lazy" src="img/logos/Adidas_Logo.svg"
+                    alt="logo adidas" class="img-client"></a>
         </section>
         <section id="recent-projects" class="recent-projects">
             <h2>Recent Projects</h2>
@@ -160,6 +175,7 @@
         </footer>
     </div>
     <script src="js/app.js"></script>
+    <script src="js/infiniteScroll.js"></script>
 </body>
 
 </html>
