--- a/index.html
+++ b/index.html
@@ -57,20 +57,38 @@
             </div>
         </section>
         <section class="client">
-            <a href="https://www.airbnb.com" target="_blank"><img loading="lazy" src="img/logos/airbnb-logo.svg"
-                    alt="logo airbnb" class="img-client"></a>
-            <a href="https://www.google.com" target="_blank"><img loading="lazy" src="img/logos/google-logo.svg"
-                    alt="logo google" class="img-client"></a>
-            <a href="https://www.microsoft.com" target="_blank"><img loading="lazy" src="img/logos/microsoft-logo.svg"
-                    alt="logo microsoft" class="img-client"></a>
-            <a href="https://www.fedex.com" target="_blank"><img loading="lazy" src="img/logos/fedex-logo.svg"
-                    alt="logo fedex" class="img-client"></a>
-            <a href="https://www.amazon.com" target="_blank"><img loading="lazy" src="img/logos/amazon-logo.svg"
-                    alt="logo amazon" class="img-client"></a>
-            <a href="https://www.nike.com" target="_blank"><img loading="lazy" src="img/logos/Logo_NIKE.svg"
-                    alt="logo nike" class="img-client"></a>
-            <a href="https://www.adidas.com" target="_blank"><img loading="lazy" src="img/logos/Adidas_Logo.svg"
-                    alt="logo adidas" class="img-client"></a>
+            <div class="marquee d-flex justify-content-around">
+                <a href="https://www.airbnb.com" target="_blank" class="first"><img loading="lazy" src="img/logos/airbnb-logo.svg"
+                        alt="logo airbnb" class="img-client"></a>
+                <a href="https://www.google.com" target="_blank"><img loading="lazy" src="img/logos/google-logo.svg"
+                        alt="logo google" class="img-client"></a>
+                <a href="https://www.microsoft.com" target="_blank"><img loading="lazy" src="img/logos/microsoft-logo.svg"
+                        alt="logo microsoft" class="img-client"></a>
+                <a href="https://www.fedex.com" target="_blank"><img loading="lazy" src="img/logos/fedex-logo.svg"
+                        alt="logo fedex" class="img-client"></a>
+                <a href="https://www.amazon.com" target="_blank"><img loading="lazy" src="img/logos/amazon-logo.svg"
+                        alt="logo amazon" class="img-client"></a>
+                <a href="https://www.nike.com" target="_blank"><img loading="lazy" src="img/logos/Logo_NIKE.svg"
+                        alt="logo nike" class="img-client"></a>
+                <a href="https://www.adidas.com" target="_blank"><img loading="lazy" src="img/logos/Adidas_Logo.svg"
+                        alt="logo adidas" class="img-client"></a>
+            </div>
+            <div class="marquee2">
+                <a href="https://www.airbnb.com" target="_blank" class="first"><img loading="lazy" src="img/logos/airbnb-logo.svg"
+                        alt="logo airbnb" class="img-client"></a>
+                <a href="https://www.google.com" target="_blank"><img loading="lazy" src="img/logos/google-logo.svg"
+                        alt="logo google" class="img-client"></a>
+                <a href="https://www.microsoft.com" target="_blank"><img loading="lazy" src="img/logos/microsoft-logo.svg"
+                        alt="logo microsoft" class="img-client"></a>
+                <a href="https://www.fedex.com" target="_blank"><img loading="lazy" src="img/logos/fedex-logo.svg"
+                        alt="logo fedex" class="img-client"></a>
+                <a href="https://www.amazon.com" target="_blank"><img loading="lazy" src="img/logos/amazon-logo.svg"
+                        alt="logo amazon" class="img-client"></a>
+                <a href="https://www.nike.com" target="_blank"><img loading="lazy" src="img/logos/Logo_NIKE.svg"
+                        alt="logo nike" class="img-client"></a>
+                <a href="https://www.adidas.com" target="_blank"><img loading="lazy" src="img/logos/Adidas_Logo.svg"
+                        alt="logo adidas" class="img-client"></a>
+            </div>
         </section>
         <section id="recent-projects" class="recent-projects">
             <h2>Recent Projects</h2>
